<resources>
    <string name="app_name">Speed Puzzle</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>



    <!-- Main screen -->
    <string name="lbl_reset">Reset!</string>
    <string name="option3x3">3 X 3</string>
    <string name="option4x4">4 X 4</string>
    <string name="lbl_time">Time:</string>
    <string name="lbl_steps">Steps:</string>
    <string name="play_solution">Play Solution!</string>
    <string name="lbl_start_game">Start Game</string>
    <string name="lbl_hi_scores">Hi Scores</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_exit_game">Exit Game</string>
    <string name="lbl_rank">#</string>
    <string name="done">Done!</string>
    <string name="board_solved">You solved in %d seconds.</string>
    <string name="play_again">Play Again</string>
</resources>
