<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_overlay"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/high_score_item_number"
            style="@style/HiScoreHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/high_score_label1_margin"
            android:text="@string/lbl_rank"
            tools:text="#1"
            />

        <TextView
            android:id="@+id/high_score_3x3_value"
            style="@style/HiScoreHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/high_score_label2_margin"
            android:text="@string/option3x3"/>

        <TextView
            android:id="@+id/high_score_4x4_value"
            style="@style/HiScoreHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/high_score_label3_margin"
            android:text="@string/option4x4"/>

    </RelativeLayout>


    <ListView
        android:id="@+id/high_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="0dip">

    </ListView>

</LinearLayout>
